<?xml version="1.0" encoding="utf-8"?>
<com.goka.walker.WalkerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/walker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                android:text="@string/personalInformation"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <!--Put form controls here-->
            <AutoCompleteTextView
                android:id="@+id/FirstName"
                android:layout_height="wrap_content"
                android:hint="@string/firstName"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </AutoCompleteTextView>
            <AutoCompleteTextView
                android:id="@+id/LastName"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </AutoCompleteTextView>
            <EditText
                android:id="@+id/DateOfBirth"
                android:layout_height="wrap_content"
                android:hint="@string/dateOfBirth"
                android:inputType="text|date"
                android:layout_width="fill_parent">
            </EditText>
            <TextView
                android:text="@string/Gender"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_male"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/male"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>
            <TextView
                android:text="@string/maritalStatus"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_single"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/single"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_married"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/married"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>
            <TextView
                android:text="@string/ifMarried"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/FamilySize"
                android:layout_height="wrap_content"
                android:text="@string/family_size"
                android:inputType="number|numberDecimal"
                android:layout_width="match_parent">
            </EditText>
            <AutoCompleteTextView
                android:id="@+id/NativeLanguage"
                android:layout_height="wrap_content"
                android:text="@string/native_language"
                android:inputType="textAutoComplete"
                android:layout_width="match_parent">
            </AutoCompleteTextView>
            <AutoCompleteTextView
                android:id="@+id/PreferredLanguage"
                android:layout_height="wrap_content"
                android:text="@string/preferred_language"
                android:inputType="textAutoComplete"
                android:layout_width="match_parent">
            </AutoCompleteTextView>
        </LinearLayout>
    </ScrollView>
</com.goka.walker.WalkerLayout>