<?xml version="1.0" encoding="utf-8"?>
<com.goka.walker.WalkerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/walker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                android:id="@+id/farmDetails"
                android:text="@string/farmInformation"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>
            <!--Put form controls here-->
            <Spinner
                android:id="@+id/registeredOWC"
                android:layout_height="wrap_content"
                android:hint="@string/registeredOWC"
                android:inputType="textAutoComplete"
                android:layout_alignParentLeft="true"
                android:layout_width="200dp"
                android:layout_below="@id/farmDetails"/>
            <Spinner
                android:layout_below="@id/farmDetails"
                android:layout_alignParentRight="true"
                android:id="@+id/farmType"
                android:layout_width="200dp"
                android:hint="@string/farmType"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:layout_toRightOf="@+id/farmCategory"
                android:layout_toEndOf="@+id/farmCategory" />
            <Spinner
                android:layout_below="@id/registeredOWC"
                android:layout_alignParentLeft="true"
                android:id="@+id/farmCategory"
                android:layout_height="wrap_content"
                android:hint="@string/farmCategory"
                android:spinnerMode="dropdown"
                android:layout_width="200dp">
            </Spinner>
            <Spinner
                android:layout_toRightOf="@id/farmCategory"
                android:layout_below="@id/farmType"
                android:id="@+id/acreage"
                android:layout_height="wrap_content"
                android:hint="@string/acreage"
                android:spinnerMode="dropdown"
                android:layout_width="200dp">
            </Spinner>
            <Spinner
                android:layout_below="@id/farmCategory"
                android:layout_alignParentLeft="true"
                android:id="@+id/produce"
                android:layout_height="wrap_content"
                android:hint="@string/produce"
                android:spinnerMode="dropdown"
                android:layout_width="200dp">
            </Spinner>
        </RelativeLayout>
    </ScrollView>
</com.goka.walker.WalkerLayout>